# crypto-market

./: Cargo.toml  README.md  README1.md  package-lock.json  package.json  server.js  test.html
matching-engine-ui/: .gitignore  README.md  package-lock.json  package.json
matching-engine-ui/src/app/: layout.tsx  page.tsx
matching-engine-ui/src/components/: Header.tsx  OrderBook.tsx  OrderForm.tsx  PriceChart.tsx  TradeHistory.tsx  UserBalance.tsx  UserOrders.tsx  WalletButton.tsx
matching-engine-ui/src/hooks/: useBalance.ts  useOrderBook.ts  useTrades.ts  useWebSocket.ts
matching-engine-ui/src/lib/: api.ts  websocket.ts
matching-engine-ui/src/providers/: WalletProvider.tsx
matching-engine-ui/src/store/: useStore.ts
matching-engine-ui/src/types/: index.ts
migrations/: schema.sql  seed.sql
programs/orderbook_program/: Cargo.toml
programs/orderbook_program/src/: lib.rs
programs/settlement_program/: Anchor.toml  Cargo.toml
programs/settlement_program/src/: lib.rs
src/: main.rs
src/api/: gateway.rs  handlers.rs  middleware.rs  mod.rs  routes.rs  websocket.rs
src/engine/: matching_engine.rs  mod.rs  types.rs
src/services/: market_service.rs  mod.rs  order_service.rs  orderbook_service.rs  settlement_service.rs  trade_service.rs  user_service.rs
